# study

./: .gitignore  README.md  git-man.md  git-tutor.md
A-old-days-when-school/asm/: cls  cls.asm
A-old-days-when-school/c/: Makefile.bak  StaticVar  func_ptr  makefile  ptr  ptr.c  sizeofunion
A-old-days-when-school/example/: getopt  sscanf.c
A-old-days-when-school/note/: Makefile  syslib.h
A-old-days-when-school/python/: if.py  makeTextFile.py  python.py  test.py  using_list.py
A-old-days-when-school/sh/: 10.sh  12.sh  data  data1  script4
api-design-rule/: api.md
base/: config.js  global-extend.js  index.js  package.json
flask/: demo.py  test.py
go/: hello.go
graphviz/: g.dot  graphviz.md  hello.dot  proto.dot
javascript/: estree.js
mongo/: commands.md  mongo-cluster.md  mongobackup.man  mongobackup.md  mongobackup.sh  mongobackupx.md  repl.sh  x.md  x.sh
node.js/: core.md
old-days-when-school/example/test/zzz/hellolinux/: Makefile  Makefile.am  config.status  configure.in  hellolinux.c
old-days-when-school/example/test/zzz/hellolinux/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
python/: .gitignore  foo.py  phone.py  testmode.py  tips.md
shell/: chattr.md  coreseek.sh  count.md  find.md  grep.md  grep_ip.sh  iptables.md  nginxvim.sh  scp.sh  startup.sh  syntax.md  sysinfo.md  tar.md  wc.md
style-layout.css/: css.md  dom.html
webpack/: .babelrc  .eslintrc  README.md  gulpfile.js  index.html  index.js  package.json  rev-manifest.json  webpack.config.js  webpack.config.vue.js
yo/: bower.json  gulpfile.js
(+822 files in other folders)
